--- a/app/styles/component.scss
+++ b/app/styles/component.scss
@@ -5,6 +5,8 @@
 @import "component/upload-image"; //图片上传
 @import "component/upload-video"; //视频上传
 @import "component/u-meum";     //菜品组件
+@import "component/date";     //日期组件
+
 .g-nav { @include g-nav();}
 .g-content{ @include g-content();}
 
