--- a/app/styles/component/table.scss
+++ b/app/styles/component/table.scss
@@ -2,7 +2,7 @@
 
 @mixin u-table(){
 
-  table{
+  >table{
     border: 1px solid $table-border-color;
     width: 100%;
     max-width: 100%;
@@ -238,6 +238,7 @@
     }
     >.input-group{
       margin-right: 10px;
+      margin-bottom: 4px;
       >*{
         border-radius: 0;
       }
