--- a/app/styles/diyBootstrap.scss
+++ b/app/styles/diyBootstrap.scss
@@ -55,7 +55,7 @@
 @import "bootstrap/buttons";
 
 // Components
-//@import "bootstrap/component-animations";
+@import "bootstrap/component-animations";//组件移动动画
 @import "bootstrap/dropdowns";     //下拉菜单样式
 //@import "bootstrap/button-groups";
 @import "bootstrap/input-groups";  //输入框组合
@@ -87,3 +87,5 @@
 //@import "bootstrap/utilities";
 //@import "bootstrap/responsive-utilities";
 
+
+@import "component/bootstrap-revision";//修正
