--- a/app/styles/page/detail-info-page.scss
+++ b/app/styles/page/detail-info-page.scss
@@ -1,15 +1,3 @@
-@mixin addon-length($length) {
-  $default-w: 25px;
-  $font-size: 14px;
-  .input-group-addon {
-    min-width: ($default-w + $font-size * $length);
-  }
-  .textarea-box {
-    .title {
-      min-width: ($default-w + $font-size * $length);
-    }
-  }
-}
 
 
 @mixin detail-info(){
@@ -34,27 +22,28 @@
   }
   .form-group{
     margin: 0;
-    .input-group-dropdown{
-      >.input-group{width: 100%;
-        .form-control{
-          border-radius: 0;
-        }
-        .input-group-btn{
-          position: static;
-        }
-        .dropdown{
-          position: static;
-          .dropdown-menu{
-            width: 100%;
-          }
-        }
-      }
-    }
+
+    //.input-group-dropdown{
+    //  >.input-group{width: 100%;
+    //    .form-control{
+    //      border-radius: 0;
+    //    }
+    //    .input-group-btn{
+    //      position: static;
+    //    }
+    //    .dropdown{
+    //      position: static;
+    //      .dropdown-menu{
+    //        width: 100%;
+    //      }
+    //    }
+    //  }
+    //}
+
     >div+div{
       border-top-style: none;
       >*{
         border-top-style: none;
-        //border-top-color: transparent;
       }
       .form-control{ &:focus{border-top-style: solid;} }
       >.input-group-dropdown{
@@ -65,6 +54,7 @@
       }
     }
     >.input-group{
+      width: 100%;
       >*{
         border-radius: 0;
       }
@@ -125,8 +115,21 @@
     .remark-textarea{
       min-height: 120px;
     }
-  }
+    .radio-group{
+      &.disabled{background-color: $input-bg-disabled;}
+      > label {
+        &.disabled{color: #aaa;font-weight: 400;cursor: not-allowed}
+        margin: {
+          left: 2px;
+          right: 2px;
+        }
+        > input {
+          margin-right: 4px;
+        }
+      }
+    }
 
+  }
 
   >.title-box {
     width: 100%;
@@ -210,10 +213,5 @@
       }
     }
   }
-  .addon-length-6 { @include addon-length(6); }
-  .addon-length-5 { @include addon-length(5); }
-  .addon-length-4 { @include addon-length(4); }
-  .addon-length-3 { @include addon-length(3); }
-  .addon-length-2 { @include addon-length(2); }
 }
 
